--- a/frontend/src/components/HomePage/Navbar/index.css
+++ b/frontend/src/components/HomePage/Navbar/index.css
@@ -32,3 +32,13 @@
 .create-blog-btn:hover {
   background-color: #0056b3;
 } 
+
+.icon-container {
+  display: flex;
+  width: 50px;
+  justify-content: space-between;
+}
+
+.favicon {
+  padding-right: 0.5em;
+}
